# git-clone

./: .gitignore  CMakeLists.txt  README.md  git.py  test.py  testfile.txt  testfile2.txt
src/: actions.c  actions.h  archives.h  data_structures.c  data_structures.h  files.c  files.h  git.c  parse.c  parse.h  serialize.c  serialize.h  utils.c  utils.h  validations.c  validations.h
src/actions/: git_add.py  git_commit.py  git_init.py  git_log.py  git_rebase.py
src/classes/: actions.py  archives.py  data_structures.py  validation_exceptions.py
src/data_structures/: commit.py  repository.py
src/files/: git_folder.py
src/tests/: test_commit.py  test_repository.py  test_validation.py
src/validations/: command_validation.py
